--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 20px;
 }
 
 h1 {
@@ -37,7 +39,7 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -59,7 +61,9 @@ h1 {
 .card {
   padding: 2em;
 }
-
+img {
+  border-radius: 18px;
+}
 .read-the-docs {
   color: #888;
 }
@@ -94,4 +98,70 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.turno-display {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.numero-turno {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.texto-puntuacion {
+  font-size: 1.5rem;
+  color: #242424;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
+}
+
+.botonTurno {
+  color: white;
+  background-color: #242424;
+  margin: 20px;
+}
+
+#imputTurno {
+  color: #242424;
+  padding: 10px;
+  margin: 20px;
+}
+.tapete {
+  display: flex;
+  flex-direction: row;
+  background-color: #0c8802;
+  width: 300 px;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 15px;
+}
+.barajaBocaAbajo {
+  width: 260px;
+  height: 330px;
+  margin: 10px;
+  padding: 0px 20px;
+}
+.cartaInicio {
+  width: 200px;
+  height: 330px;
+  margin: 10px;
+  padding: 0px 20px;
+}
+.cartasJuego {
+  width: 560px;
+  height: 330px;
+  margin: 10px;
+  padding: 0px 20px;
 }
